# ant-webex

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CONTRIBUTING-i18n.md  INSTALLER.md  PRIVACY.md  PUBLISHING.md  README.md  RELEASING.md  STORE.md  USAGE.md  build.mjs  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
native-host/: Cargo.toml  README.md
native-host/src/: main.rs
scripts/: amo-attach-source.mjs  check-bundle-size.mjs  check-permissions.mjs  cws-publish.mjs
src/: manifest.firefox.json  manifest.json
src/_locales/ar/: messages.json
src/_locales/bg/: messages.json
src/_locales/de/: messages.json
src/_locales/en/: messages.json
src/_locales/es/: messages.json
src/_locales/fr/: messages.json
src/_locales/he/: messages.json
src/_locales/id/: messages.json
src/_locales/ja/: messages.json
src/_locales/ko/: messages.json
src/_locales/nl/: messages.json
src/_locales/pt-BR/: messages.json
src/_locales/ru/: messages.json
src/_locales/tr/: messages.json
src/_locales/uk/: messages.json
src/_locales/vi/: messages.json
src/background/: index.ts
src/content/: i18n.ts  index.ts  renderer.ts  scanner.ts
src/i18n/: content-locales.json  index.test.ts  index.ts
src/onboarding/: index.html  index.ts  style.css
src/popup/: index.html  index.ts  style.css
src/shared/: antd-client.ts  constants.ts  messages.ts  types.ts  version.test.ts  version.ts
src/types/: assets.d.ts  chrome.d.ts
test/: page.html  seed-and-serve.ps1
(+20 files in other folders)
