[package]
name = "ant-webex-host"
version = "0.1.0"
edition = "2021"
description = "Native messaging host for Autonomi browser extension — reads daemon.port and checks for antd binary"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
which = "7"

[profile.release]
strip = true
lto = true
opt-level = "z"   # Smallest binary
